--- a/src/app/container-component/note-preview/note-preview.component.html
+++ b/src/app/container-component/note-preview/note-preview.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12 text-center">
-      <div class="card" *ngFor="let note of noteService.notes">
+      <div class="card" *ngFor="let note of notes">
         <div class="card-block">
           <h4 class="card-title">{{note.title}}</h4>
           <hr>
