--- a/src/app/container-component/group/group.component.html
+++ b/src/app/container-component/group/group.component.html
@@ -19,12 +19,14 @@
         <br>
       </div>
       <div class="card" *ngFor="let group of groups">
-        <div class="card-block">
-          <h5 class="card-title">
+        <div class="card-block" >
+          <h5 class="card-title text-center">
             {{group.name}}
           </h5>
         </div>
       </div>
+      <br>
+      <hr>
     </div>
   </div>
 </div>
