--- a/src/app/container-component/note-preview/note-preview.component.html
+++ b/src/app/container-component/note-preview/note-preview.component.html
@@ -1,17 +1,18 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-12 text-center">
+    <div class="col-md-12 ">
       <div class="card" *ngFor="let note of notes">
         <div class="card-block">
-          <h4 class="card-title">{{note.title}}</h4>
+          <h4 class="card-title text-center">{{note.title}}</h4>
           <hr>
-          <p class="card-text text-centered">{{note.description}}</p>
-
-          <ss-multiselect-dropdown [options]="myOptions"  [(ngModel)]="optionsModel" (ngModelChange)="onChange($event)"></ss-multiselect-dropdown>
-
+          <p class="card-text text-center">{{note.description}}</p>
+          <hr>
+          <p class="card-text" *ngFor="let group of groups" >
+              <button type="button" class="btn" style="float: right;" aria-describedby="basic-addon1">{{group.name}}</button>
+          <!-- <ss-multiselect-dropdown [options]="myOptions"  [(ngModel)]="groups" align="right" (ngModelChange)="onChange($event)"></ss-multiselect-dropdown> -->
+            </p>
           </div>
       </div>
-
     </div>
   </div>
 </div>
