--- a/src/app/container-component/groupnote/groupnote.component.html
+++ b/src/app/container-component/groupnote/groupnote.component.html
@@ -1,7 +1,21 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12 ">
-      Works
+        <div class="col-md-4">
+            <div class="card">
+              <div class="card-block">
+                <h4 class="card-title text-center">
+                  Group Title
+                </h4>
+                <hr>
+                <p class="card-title text-center">
+                  Note Title
+                </p>
+                <p class="card-text text-center">
+                  Note Description
+                </p>
+              </div>
+            </div>
     </div>
   </div>
 </div>
