update(groupnote): add groupnote functionality, missing only to fix groupnotes.html

--- a/src/app/container-component/container-component.component.html
+++ b/src/app/container-component/container-component.component.html
@@ -5,4 +5,4 @@
 <app-note-preview (addGroup)="onAddGroup($event) "[notes]="notes" [groups]="groups"></app-note-preview>
 <br>
 
-<app-groupnote></app-groupnote>
+<app-groupnote [groupnotes]="groupnotes"></app-groupnote>
