--- a/src/app/container-component/groupnote/groupnote.component.html
+++ b/src/app/container-component/groupnote/groupnote.component.html
@@ -1,21 +1,26 @@
 <div class="container">
-  <div class="row">
+  <div class="row" *ngFor="let gn of groupnotes">
     <div class="col-md-12 ">
         <div class="col-md-4">
             <div class="card">
-              <div class="card-block">
+              <div class="card-block" [style.bacgkround-color]="color">
                 <h4 class="card-title text-center" >
-                  Group Title
+                  {{gn.group.name}}
                 </h4>
                 <hr>
                 <p class="card-title text-center">
-                  Note Title
+                  {{gn.note.title}}
                 </p>
                 <p class="card-text text-center">
-                  Note Description
+                  {{gn.note.description}}
                 </p>
+                <!-- <div class="btn-group" style="float: left;">
+                  <button style="background-color:green" type="button" class="btn btn-success btn-xs"(click)="readColor($event)" >Green</button>
+                  <button style="background-color:yellow" type="button" class="btn btn-warning btn-xs" (click)="readColor($event)">Yellow</button>
+                  <button style="bacgkround-color:red" type="button" class="btn btn-danger btn-xs" (click)="readColor($event)">Red</button>
+                </div> -->
               </div>
-            </div>
+              </div>
     </div>
   </div>
 </div>
