--- a/src/app/container-component/groupnote/groupnote.component.html
+++ b/src/app/container-component/groupnote/groupnote.component.html
@@ -3,22 +3,36 @@
     <div class="col-md-12 ">
         <div class="col-md-4">
             <div class="card">
-              <div class="card-block" [style.bacgkround-color]="color">
+              <div class="card-block" >
                 <h4 class="card-title text-center" >
                   {{gn.group.name}}
                 </h4>
                 <hr>
-                <p class="card-title text-center">
-                  {{gn.note.title}}
-                </p>
-                <p class="card-text text-center">
-                  {{gn.note.description}}
-                </p>
-                <!-- <div class="btn-group" style="float: left;">
-                  <button style="background-color:green" type="button" class="btn btn-success btn-xs"(click)="readColor($event)" >Green</button>
-                  <button style="background-color:yellow" type="button" class="btn btn-warning btn-xs" (click)="readColor($event)">Yellow</button>
-                  <button style="bacgkround-color:red" type="button" class="btn btn-danger btn-xs" (click)="readColor($event)">Red</button>
-                </div> -->
+                <div class="card-block" [ngStyle]="{'background-color':gn.group.color}">
+                    <h6 class="card-title text-center">
+                        {{gn.note.title}}
+                    </h6>
+                      <hr>
+                      <p class="card-text text-center">
+                        {{gn.note.description}}
+                      </p>
+                </div>
+
+             <div class="btn-group" style="float: right;">
+              <button style="background-color:green" type="button" class="btn btn-default" (click)="readColor('green',gn.group.id)">
+                  <span class="dot"></span>
+              </button>
+              <button style="background-color:yellow" type="button" class="btn btn-default" (click)="readColor('yellow',gn.group.id)">
+                  <span class="dot"></span>
+              </button>
+              <button style="background-color:red" type="button" class="btn btn-default" (click)="readColor('red',gn.group.id)">
+                  <span class="dot"></span>
+              </button>
+
+               <!-- <button  type="button" class="btn btn-success btn-xs"(click)="readColor('green',gn.group.id)" >Green</button>
+                  <button  type="button" class="btn btn-warning btn-xs" (click)="readColor('yellow',gn.group.id)">Yellow</button>
+                  <button  type="button" class="btn btn-danger btn-xs" (click)="readColor('red',gn.group.id)">Red</button>  -->
+                </div>
               </div>
               </div>
     </div>
