update(button functionality): add note complete, note remove

--- a/src/app/container-component/groupnote/groupnote.component.css
+++ b/src/app/container-component/groupnote/groupnote.component.css
@@ -1,6 +1,6 @@
-.green
+.purple
 {
-  background-color: green;
+  background-color: purple;
 }
 
 .yellow
@@ -10,7 +10,7 @@
 
 .red
 {
-  background-color: red;
+  background-color: orange;
 }
 
 .dot {
