--- a/src/app/container-component/groupnote/groupnote.component.html
+++ b/src/app/container-component/groupnote/groupnote.component.html
@@ -1,40 +1,51 @@
 <div class="container">
-  <div class="row" *ngFor="let gn of groupnotes">
+  <div class="row d-inline-block" *ngFor="let gn of groupnotes">
     <div class="col-md-12 ">
-        <div class="col-md-4">
-            <div class="card">
-              <div class="card-block" >
-                <h4 class="card-title text-center" >
-                  {{gn.group.name}}
-                </h4>
-                <hr>
-                <div class="card-block" [ngStyle]="{'background-color':gn.group.color}">
-                    <h6 class="card-title text-center">
-                        {{gn.note.title}}
-                    </h6>
-                      <hr>
-                      <p class="card-text text-center">
-                        {{gn.note.description}}
-                      </p>
-                </div>
-
-             <div class="btn-group" style="float: right;">
-              <button style="background-color:green" type="button" class="btn btn-default" (click)="readColor('green',gn.group.id)">
-                  <span class="dot"></span>
+      <div class="col-md-12">
+        <div class="card">
+          <div class="card-block">
+            <h4 class="card-title text-center">
+              {{gn.group.name}}
+            </h4>
+            <hr>
+            <div class="card-block" [ngStyle]="{'background-color':gn.group.color}">
+              <h6 class="card-title">
+                {{gn.note.title}}
+              </h6>
+              <hr>
+              <p class = "card-text text-center">
+                {{gn.note.description}}
+              </p>
+            </div>
+            <div class="btn-group" style="float: right;">
+              <button style="background-color:purple" type="button" class="btn btn-default" (click)="readColor('purple',gn.group.id)">
+                <span class="dot"></span>
               </button>
               <button style="background-color:yellow" type="button" class="btn btn-default" (click)="readColor('yellow',gn.group.id)">
-                  <span class="dot"></span>
+                <span class="dot"></span>
               </button>
-              <button style="background-color:red" type="button" class="btn btn-default" (click)="readColor('red',gn.group.id)">
-                  <span class="dot"></span>
+              <button style="background-color:orange" type="button" class="btn btn-default" (click)="readColor('orange',gn.group.id)">
+                <span class="dot"></span>
               </button>
-
-               <!-- <button  type="button" class="btn btn-success btn-xs"(click)="readColor('green',gn.group.id)" >Green</button>
+              <!-- <button  type="button" class="btn btn-success btn-xs"(click)="readColor('green',gn.group.id)" >Green</button>
                   <button  type="button" class="btn btn-warning btn-xs" (click)="readColor('yellow',gn.group.id)">Yellow</button>
                   <button  type="button" class="btn btn-danger btn-xs" (click)="readColor('red',gn.group.id)">Red</button>  -->
-                </div>
-              </div>
-              </div>
+              <hr>
+            </div>
+            <br>
+          <br>
+            <div class="btn-group" style="float: right;">
+              <button type="button" class="btn btn-default" (click)="setCompleted()">
+                <span class="dot">✓</span>
+              </button>
+            </div>
+            <div class="btn-group" style="float: right;">
+              <button type="button" class="btn btn-default" (click)="setRemove()">
+                <span class="dot">X</span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-</div>
