update(function): add onAddNoteToGroup/onSetCompleted/onSetRemoved functionality

--- a/src/app/container-component/groupnote/groupnote.component.html
+++ b/src/app/container-component/groupnote/groupnote.component.html
@@ -14,7 +14,7 @@
                 <br>
                 <br>
                 <div class="btn-group" style="float: left;">
-                    <button style="background-color:green" type="button" class="btn btn-default" (click)="setCompleted(group,note)">✓</button>
+                    <button style="background-color:green" type="button" class="btn btn-default" (click)="setComplete(group,note)">✓</button>
                     <button style="background-color:red" type="button" class="btn btn-default" (click)="setRemove(group, note)">X</button>
                   </div>
               </h6>
