--- a/src/app/container-component/container-component.component.html
+++ b/src/app/container-component/container-component.component.html
@@ -5,4 +5,4 @@
 <app-note-preview (addGroup)="onAddNoteToGroup($event) "[notes]="notes" [groups]="groups"></app-note-preview>
 <br>
 
-<app-groupnote [groups]="groups" (onSetRemove)="onSetRemoved($event)" (onSetComplete)="onSetCompleted($event)"></app-groupnote>
+<app-groupnote [groups]="groups" (setRemoved)="onSetRemoved($event)" (setCompleted)="onSetCompleted($event)"></app-groupnote>
