--- a/src/app/container-component/group/group.component.html
+++ b/src/app/container-component/group/group.component.html
@@ -9,6 +9,7 @@
   <br>
   <div class="row" *ngIf="!addGroup">
     <div class="col-md-8">
+      <h6>Completed Notes are: {{completedNotes}}</h6>
     </div>
     <div class="col-md-4">
       <div class="list-group">
