--- a/src/app/container-component/groupnote/groupnote.component.css
+++ b/src/app/container-component/groupnote/groupnote.component.css
@@ -13,10 +13,10 @@
   background-color: orange;
 }
 
-.dot {
+/* .dot {
   height: 25px;
   width: 25px;
   background-color: transparent;
   border-radius: 40%;
-  /* display: inline-block; */
-}
+  display: inline-block;
+} */
