--- a/src/app/container-component/note-preview/note-preview.component.html
+++ b/src/app/container-component/note-preview/note-preview.component.html
@@ -6,10 +6,18 @@
           <h4 class="card-title text-center">{{note.title}}</h4>
           <hr>
           <p class="card-text text-center">{{note.description}}</p>
-          <hr>
-          <p class="card-text" *ngFor="let group of groups;">
+          <div class="dropdown" style="float: right;">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+              aria-expanded="false">
+              Choose Group
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" type="button" class="btn" *ngFor="let group of groups;" (click)="onAddGroup(note, group)" href="#">{{group.name}}</a>
+            </div>
+          </div>
+          <!-- <p class="card-text" *ngFor="let group of groups;">
             <button type="button" class="btn" style="float: right;" (click)="onAddGroup(note, group)">{{group.name}}</button>
-          </p>
+          </p> -->
         </div>
       </div>
     </div>
