update(various changes): styling, group button functionality

--- a/src/app/container-component/group/group.component.html
+++ b/src/app/container-component/group/group.component.html
@@ -3,7 +3,7 @@
     <div class="col-md-8">
     </div>
     <div class="col-md-4">
-      <button type="button" class="btn" style="float: right;" (click)="onAddGroup()">+ Create a Group</button>
+      <button type="button" class="btn btn-outline-secondary" style="float: right;" (click)="onAddGroup()">+ Create a Group</button>
     </div>
   </div>
   <br>
@@ -17,7 +17,7 @@
           <input type="text" class="form-control" placeholder="Group Title" [(ngModel)]="groupTitle">
         </div>
         <br>
-        <button type="button" class="btn" (click)="onCreateGroup(groupTitle)">Create</button>
+        <button type="button" class="btn btn-outline-secondary" (click)="onCreateGroup(groupTitle)">Create</button>
         <br>
       </div>
     </div>
