--- a/src/app/container-component/groupnote/groupnote.component.html
+++ b/src/app/container-component/groupnote/groupnote.component.html
@@ -34,7 +34,9 @@
                   Select Color
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <a class="dropdown-item" style="background-color:purple" type="button" class="btn btn-default" (click)="readColor('purple',group.id)"></a>
+                  <a class="dropdown-item btn" style="color:purple" (click)="readColor('purple',group.id)" >
+                     Purple
+                  </a>
                   <a class="dropdown-item" style="background-color:yellow" type="button" class="btn btn-default" (click)="readColor('yellow',group.id)"></a>
                   <a class="dropdown-item" style="background-color:orange" type="button" class="btn btn-default" (click)="readColor('orange',group.id)"></a>
                 </div>
