--- a/src/app/container-component/create-note/note.component.html
+++ b/src/app/container-component/create-note/note.component.html
@@ -1,19 +1,16 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12 text-center">
-      <h3>Create a Note:</h3>
-      <br>
-      <button type="button" class="btn btn-primary" *ngIf="addNote" (click)="onAddNote()">+</button>
       <div class="list-group" *ngIf="!addNote">
         <div class="input-group input-group-lg">
           <input type="text" class="form-control" placeholder="Post Title" [(ngModel)] = "postTitle">
         </div>
         <br>
         <div class="input-group input-group-lg">
-          <input type="text" class="form-control" placeholder="Post Description"  [(ngModel)]= "postDescription">
+          <input type="text" class="form-control" style="height: 200px" placeholder="Post Description"  [(ngModel)]= "postDescription">
         </div>
         <br>
-        <button type="button" class="btn btn-primary" (click)="onCreateNote(postTitle,postDescription);">Create</button>
+        <button type="button" class="btn btn-outline-primary" (click)="onCreateNote(postTitle,postDescription);">Create</button>
         <br>
       </div>
     </div>
