--- a/src/app/container-component/groupnote-preview/groupnote.component.css
+++ b/src/app/container-component/groupnote-preview/groupnote.component.css
@@ -1,17 +1,17 @@
-.purple
+/* .purple
 {
-  background-color: purple;
+  background-color:#9ee29b;
 }
 
-.yellow
+.blue
 {
-  background-color: yellow;
+  background-color:#97d4e4;
 }
 
-.red
+.orange
 {
-  background-color: orange;
-}
+  background-color: #f5ca79;
+} */
 
 /* .dot {
   height: 25px;
