--- a/src/app/container-component/container-navbar/container-navbar.component.html
+++ b/src/app/container-component/container-navbar/container-navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color:orange">
+<nav class="navbar navbar-expand-lg navbar-light " style="background-color: rgba(255, 255, 255, 0.658)">
   <a class="navbar-brand" href="#">
     <img src="http://moziru.com/images/hand-gesture-clipart-task-management-18.gif" width="45" height="30" class="d-inline-block align-top"
       alt=""> Tsiris Keep
