--- a/src/app/container-component/create-note-intro/create-note.component.html
+++ b/src/app/container-component/create-note-intro/create-note.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row">
-      <div class="col-md-12 text-center">
-    <h3>Create a Note:</h3>
-    <br>
-    <button type="button" class="btn btn-outline-primary" *ngIf="addNote" (click)="onAddNote()">+</button>
-  </div>
+    <div class="col-md-12 text-center" *ngIf="addNote">
+      <h3>Create a Note:</h3>
+      <br>
+      <button type="button" class="btn btn-outline-primary" (click)="onAddNote()">+</button>
+    </div>
   </div>
 </div>
