--- a/src/app/container-component/create-note/note.component.html
+++ b/src/app/container-component/create-note/note.component.html
@@ -1,18 +1,20 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12 ">
+      <form #noteForm="ngForm">
       <div class="list-group text-center" *ngIf="!addNote">
         <div class="input-group input-group-lg">
-          <input type="text" class="form-control" placeholder="Note Title" [(ngModel)] = "noteTitle">
+          <input type="text" class="form-control" placeholder="Note Title" required [(ngModel)]="noteTitle" name="title">
         </div>
         <br>
         <div class="input-group input-group-lg">
-          <input type="text" class="form-control" style="height: 200px" placeholder="Note Description"  [(ngModel)]= "noteDescription">
+          <input type="text" class="form-control" style="height: 200px" placeholder="Note Description" required [(ngModel)]="noteDescription" name="description">
         </div>
         <br>
-        <button type="button" class="btn btn-outline-primary" (click)="onCreateNote(noteTitle,noteDescription);">Create</button>
+        <button type="button" class="btn btn-outline-primary" [disabled]="!noteForm.form.valid" (click)="onCreateNote(noteTitle,noteDescription);">Create</button>
         <br>
       </div>
+    </form>
     </div>
   </div>
 </div>
