--- a/src/app/container-component/container-component.component.html
+++ b/src/app/container-component/container-component.component.html
@@ -17,7 +17,7 @@
 </div>
 
 
-<app-note-preview (addGroup)="onAddNoteToGroup($event) " [notes]="notes" [groups]="groups"></app-note-preview>
+<app-note-preview (addGroup)="onAddNoteToGroup($event)" [note]="note" [notes]="notes" [groups]="groups"></app-note-preview>
 <br>
 
 <app-groupnote [groups]="groups" (setRemoved)="onSetRemoved($event)" (setCompleted)="onSetCompleted($event)"></app-groupnote>
