--- a/src/app/container-component/note-preview/note-preview.component.html
+++ b/src/app/container-component/note-preview/note-preview.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12 ">
+      <h3 *ngIf="note">Notes: </h3>
       <div class="card" *ngFor="let note of notes">
         <div class="card-block">
           <h4 class="card-title text-center">{{note.title}}</h4>
