--- a/src/app/container-component/groupnote-preview/groupnote.component.html
+++ b/src/app/container-component/groupnote-preview/groupnote.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row d-inline-block" *ngFor="let group of groups" >
     <div class="col-md-12">
-        <div class="card" [ngStyle]="{'background-color':group.color}">
+        <div class="card mr-3 mb-2" [ngStyle]="{'background-color':group.color}">
           <div class="card-block">
             <h4 class="card-title text-center" >
               {{group.name}}
@@ -13,7 +13,7 @@
                 <br>
                 <br>
               </h6>
-              <p class="card-text text-center">
+              <p class="card-text text-center" >
                 {{note.description}}
               </p>
               <div class="dropdown d-inline-block">
