update(functioality): add Group title in groups and hostlistener on keyboard.enter

--- a/src/app/container-component/create-group/group.component.html
+++ b/src/app/container-component/create-group/group.component.html
@@ -14,7 +14,7 @@
         <form #groupForm="ngForm">
         <div class="list-group">
           <div class="input-group">
-            <input type="text" class="form-control" placeholder="Group Title" required [(ngModel)]="groupTitle" name="title">
+            <input type="text" class="form-control" placeholder="Group Title" (keydown.enter)="onCreateGroup(groupTitle)" required [(ngModel)]="groupTitle" name="title">
           </div>
           <br>
           <button type="button" class="btn btn-outline-primary" [disabled]="!groupForm.form.valid" (click)="onCreateGroup(groupTitle)">Create</button>
