--- a/src/app/container-component/container-component.component.html
+++ b/src/app/container-component/container-component.component.html
@@ -20,4 +20,12 @@
 <app-note-preview (addGroup)="onAddNoteToGroup($event)" [note]="note" [notes]="notes" [groups]="groups"></app-note-preview>
 <br>
 
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h3 *ngIf="showGroupsCreation">Groups:</h3>
+      <br>
+    </div>
+  </div>
+</div>
 <app-groupnote [groups]="groups" (setRemoved)="onSetRemoved($event)" (setCompleted)="onSetCompleted($event)"></app-groupnote>
