--- a/src/app/container-component/create-group/group.component.html
+++ b/src/app/container-component/create-group/group.component.html
@@ -23,7 +23,7 @@
       </form>
       </div>
       <div class="col-md-12">
-          <h6>Completed Notes are: {{completedNotes}}</h6>
+          <h6>Completed Notes are: {{noteService.completedNotes}}</h6>
         </div>
     </div>
   </div>
